--- a/DataBase_app/DataBase_app/DataBase_app.csproj
+++ b/DataBase_app/DataBase_app/DataBase_app.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{26CD6F84-EC5C-425D-BA77-238C5331E88C}</ProjectGuid>
+    <ProjectGuid>{1AB99845-0B81-4EB4-9EB6-61187AD49C44}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>DataBase_appl</RootNamespace>
-    <AssemblyName>DataBase_appl</AssemblyName>
+    <RootNamespace>DataBase_app</RootNamespace>
+    <AssemblyName>DataBase_app</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
