--- a/DataBase_app/DataBase_app/App.config
+++ b/DataBase_app/DataBase_app/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="DataBase_app.Properties.Settings.new_DBConnectionString"
+            connectionString="Data Source=MARCO\SQLEXPRESS;Initial Catalog=new_DB;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
